k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedone-api
  labels:
    app: wedone
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedone
      tier: backend
  template:
    metadata:
      labels:
        app: wedone
        tier: backend
    spec:
      containers:
        - name: web
          image: kobigdocker/wedelivery:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "200m"
