k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: wedone
    tier: database
spec:
  serviceName: "db"
  replicas: 1
  selector:
    matchLabels:
      app: wedone
      tier: database
  template:
    metadata:
      labels:
        app: wedone
        tier: database
    spec:
      # securityContext removed to allow OpenShift to auto-assign UID/GID
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
